tests/interp/bad/no-feed-rate.ngc
;Cannot do g1 with zero feed rate
g1x1
